# ksha-token-prog

./: .gitignore  Anchor.toml  Cargo.toml  README.md  package.json  txtx.yml
app/client-side/: Cargo.toml  README.md
app/client-side/src/: main.rs
app/client-side/templates/: home.html
call-prog/client-call/: Cargo.toml  README.md
call-prog/client-call/src/: main.rs
call-prog/client-call/templates/: create_batch.html  plant_list.html  register_plant.html
programs/ksha-csi-cc/: Cargo.toml
programs/ksha-csi-cc/src/: constants.rs  error.rs  instructions.rs  lib.rs
programs/ksha-csi-cc/src/instructions/: initialize.rs
programs/ksha-csi-cc/tests/: test_initialize.rs
runbooks/: README.md
runbooks/deployment/: main.tx  signers.devnet.tx  signers.localnet.tx  signers.mainnet.tx
