[package]
name = "client-side"
version = "0.1.0"
edition = "2024"

[dependencies]
askama = "0.16.0"
axum = { version = "0.8.9", features = ["macros", "multipart"] }
serde = { version = "1.0.228", features = ["derive"] }
tokio = { version = "1.52.3", features = ["full"] }

[dev-dependencies]
headers = "0.4.1"
http-body-util = "0.1.3"
tower = { version = "0.5.3", features = ["util"] }
