[package]
name = "client-call"
version = "0.1.0"
edition = "2024"

[dependencies]
anchor-client = { version = "1.0.2", features = ["async"] }
anchor-lang = "1.0.2"
anchor-spl = "1.0.2"
anyhow = "1.0.102"
askama = "0.16.0"
axum = { version = "0.8.9", features = ["macros"] }
serde = { version = "1.0.228", features = ["derive"] }
solana-rpc-client = "4.0.0"
solana-sdk = "4.0.1"
tokio = { version = "1.52.3", features = ["full"] }
